# mongo

./: .gitignore  Makefile  pyproject.toml
core/: main.py
db/: db_connection.py  schemas.py
